# Persistent-Email-Task-Agent

./: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  demo.py  docker-compose.yml  pyproject.toml
.codex/: config.toml
.codex/agents/: eval-engineer.toml  memory-engineer.toml  model-engineer.toml  serving-engineer.toml  structured-output-engineer.toml
.github/workflows/: ci.yml
data/sample_emails/: acme_proposal.json
docs/: architecture.md  elevator-pitch.md  roadmap.md
eval/scenarios/: carry_forward_acme.yaml  carry_forward_vague_reference.yaml
src/persistent_agent/: __init__.py
src/persistent_agent/agent/: bootstrap.py  loop.py
src/persistent_agent/app/: api.py  cli.py
src/persistent_agent/eval/: harness.py  metrics.py
src/persistent_agent/memory/: __init__.py  store.py
src/persistent_agent/models/: __init__.py  client.py  factory.py  repair.py  schemas.py
src/persistent_agent/tools/: base.py  email_tools.py  memory_tools.py
tests/: test_agent.py  test_api.py  test_email_tools.py  test_eval.py  test_memory.py  test_repair.py
