[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "persistent-email-task-agent"
version = "0.1.0"
description = "A proactive email and task agent that carries work forward over time."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1",
  "openai>=1.60,<2",
  "pydantic>=2.10,<3",
  "pyyaml>=6.0,<7",
  "uvicorn>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=8.3,<9",
  "ruff>=0.9,<1",
]

[project.scripts]
persistent-agent = "persistent_agent.app.cli:main"
persistent-agent-eval = "persistent_agent.eval.harness:main"

[tool.hatch.build.targets.wheel]
packages = ["src/persistent_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

